Auto-commit on 2025-06-04 11:00:39